Fixed z-index & better margin for menuburger

--- a/collections/styles.css
+++ b/collections/styles.css
@@ -951,6 +951,10 @@ span.breadcrumb a:before {
 	span.tagMatches {
 		top: 45px;
 	}
+	
+	.sidebar-layout .index_gal_desc h1 {
+		margin-top: 2rem;
+	}
 }
 @media (min-width:1800px) {
 	#nav-links a, #nav-links li.menu_menulabel, #nav-links .menu-active, a.navbar_title {
@@ -2340,8 +2344,10 @@ input[type='reset'] {
 /* Custom hamburger menu positioning for the sidebar view */
 .sidebar-layout .toggle_nav {
 	position: absolute;
-	top: 2ch;
-	right: 2rem;
+	top: 0;
+	right: 0;
+	z-index: 900;
+	padding: 2rem;
 }
 
 #sidebar .sidebar_site_title {
